create and join looking better

--- a/create_party.html
+++ b/create_party.html
@@ -50,7 +50,7 @@
             <div id="party_settings">
 
                 <div class="add" id="add_genres">
-                    <h3>Add Genre:</h3>
+                    <h3>Add Genre</h3>
                     <div class="box">
                       <div class="container-1">
                           <span class="icon"><i class="fa fa-search"></i></span>
@@ -60,7 +60,7 @@
                   <div id="tags"></div>
               </div>
               <div class="add" id="add_friends">
-                <h3>Add Friends: </h3>
+                <h3>Add Friends </h3>
                 <div class="box">
                   <div class="container-1">
                       <span class="icon"><i class="fa fa-search"></i></span>
@@ -72,8 +72,8 @@
           </div>
           <div id="privacy">
             <form action="">
-                <input checked type="radio" name="privacy" value="public">Public
-                <input type="radio" name="privacy" value="private">Private
+                <input checked type="radio" name="privacy" value="public">  Public
+                <input class="private" type="radio" name="privacy" value="private">  Private
             </form>
         </div>
     </div>
