--- a/join_party.html
+++ b/join_party.html
@@ -33,7 +33,9 @@
                        </div>
                        <div class="toolbar">
                            <a id="hamburger" href=""><i class="fa fa-bars fa-lg"></i></a>
-                           <a href="index.html"> <img id="logo" src="img/logo.png"></a>
+                           <a href="index.html"><img id="logo" src="img/logo.png"></a>
+                           <!-- <h1 style="color: #ccc"> ugh  </h1> -->
+                           <!-- <img id="another_widget" src=""> -->
                        </div> 
 
                       
@@ -49,41 +51,37 @@
                    <div id="page">
                      <div id="parties">
                             <div class="party">
-                              <div class="party-name ver-align">
-                                   <h1>John's Birthday Bash</h1>
+                                   <h1 class="party_name">John's Birthday Bash</h1>
                                    <h3>Created by John Doe</h3>
-                              </div>
-                               <i class="fa fa-info-circle"></i>
-                               <div class="expanded_information">
-                                      <p class="party_description">Come and hang out</p>
-                                      <h4>friends attending</h4>
-                                      <ul class="friends_list">
-                                             <li>
-                                                    <div class="placeholder_image"></div>
-                                                    <span class="name">John</span>
-                                             </li>
-                                             <li>
-                                                    <div class="placeholder_image"></div>
-                                                    <span class="name">Jeff</span>
-                                             </li>
-                                             <li>
-                                                    <div class="placeholder_image"></div>
-                                                    <span class="name">Amanda</span>
-                                             </li>
-                                             <li>
-                                                    <div class="placeholder_image"></div>
-                                                    <span class="name">Jane</span>
-                                             </li>
-                                      </ul>
-                                      <a href="party_page.html" class="green_button"> Join Party</a>
-                               </div>
+                                   <i class="fa fa-info-circle"></i>
+                                   <div class="expanded_information" style="display:none;">
+                                          <p class="party_description">Come and hang out</p>
+                                          <h4>friends attending</h4>
+                                          <ul class="friends_list">
+                                                 <li>
+                                                        <div class="placeholder_image"></div>
+                                                        <span class="name">John</span>
+                                                 </li>
+                                                 <li>
+                                                        <div class="placeholder_image"></div>
+                                                        <span class="name">Jeff</span>
+                                                 </li>
+                                                 <li>
+                                                        <div class="placeholder_image"></div>
+                                                        <span class="name">Amanda</span>
+                                                 </li>
+                                                 <li>
+                                                        <div class="placeholder_image"></div>
+                                                        <span class="name">Jane</span>
+                                                 </li>
+                                          </ul>
+                                          <a href="party_page.html" class="green_button"> Join Party</a>
+                                   </div>
                             </div>
                             <div class="party">
-                              <div class="party-name ver-align">
-                                   <h1>Housewarming</h1>
+                                   <h1 class="party_name">Housewarming</h1>
                                    <h3>Created by Jane Doe</h3>
-                              </div>
-                               <i class="fa fa-info-circle"></i>
+                                   <i class="fa fa-info-circle"></i>
                                    <div class="expanded_information" style="display:none;">
                                           <p class="party_description"> This is a super cool party. All of the important part information will go here. Everyone should join this party because this is a super awesome party because we are using the spot app to collectively, collaboratively play our music. </p>
                                           <h4>friends attending</h4>
@@ -109,11 +107,9 @@
                                    </div>
                             </div>
                             <div class="party">
-                              <div class="party-name ver-align">
-                                   <h1>Friendsgiving</h1>
+                                   <h1 class="party_name">Friendsgiving</h1>
                                    <h3>Created by Jill Doe</h3>
-                              </div>
-                               <i class="fa fa-info-circle"></i>
+                                   <i class="fa fa-info-circle"></i>
                                    <div class="expanded_information" style="display:none;">
                                           <p class="party_description"> This is a super cool party. All of the important part information will go here. Everyone should join this party because this is a super awesome party because we are using the spot app to collectively, collaboratively play our music. </p>
                                           <h4>friends attending</h4>
@@ -162,14 +158,15 @@
         <script>
         $(document).ready(function(){
               $('.party i').click(function(){
-                     $(this).siblings(".party").children('.expanded_information').hide();
-                     $(this).siblings('.expanded_information').toggle();
-                     $('.party').css('background-color',"white");
-                     $(this).css('background-color',"#EBEBEB");
-                     // $(this).children(".info_icon").toggleClass('fa-plus');
-                     // $(this).children(".info_icon").toggleClass('fa-minus');
-                     $(this).siblings(".party").children(".info_icon").removeClass("fa-minus");
-                     $(this).siblings(".party").children(".info_icon").addClass("fa-plus");
+                 $(this).parent().siblings(".party").children('.expanded_information').hide();
+                 $(this).siblings('.expanded_information').toggle();
+                 $('.party').css('background-color',"white");
+                 $(this).parent().css('background-color',"#EBEBEB");
+                 $(this).toggleClass("active");
+                 // $(this).children(".info_icon").toggleClass('fa-plus');
+                 // $(this).children(".info_icon").toggleClass('fa-minus');
+                 // $(this).siblings(".party").children(".info_icon").removeClass("fa-minus");
+                 // $(this).siblings(".party").children(".info_icon").addClass("fa-plus");
               });
         })
         </script>
